--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="preload" href="https://fonts.googleapis.com/css?family=Inter+Tight:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter+Tight:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap"></noscript>
-  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=fyuc7F"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=fyuc7F" type="text/css">
+  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=vxNmUj"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=vxNmUj" type="text/css">
 
   
   
@@ -511,7 +511,7 @@ if (document.querySelector('#simp')) {
         </div>
         <div class="row justify-content-center">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="frL1lQRKzttIzgQqmxs+SuiBWMwKSEHas8Gf2nJC+exw6mkujqeamD1wRyaYt14oY7autKFqEJlwyBLhcVuRmKK6Zr0cqLlRPNHdC3sHZ/awrRNn/5sy7V0HB/b/OQa3">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="kG1V+IcASk4B2ffl55qzNvs7SX3YmW3RNKSNvlKdf7HJUM1pq+3myCs8U9n8zEPcoJ5BE1mGlwZgV3qB6foVvs10p65KXRTkZKJomkBeMkyDljNxEjt/c6NijFztBk47">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -529,7 +529,7 @@ if (document.querySelector('#simp')) {
                         <div class="col-12 form-group mb-3" data-for="textarea">
                             <textarea name="textarea" placeholder="Message" data-form-field="textarea" class="form-control" id="textarea-form02-1p"></textarea>
                         </div>
-                        <div class="col-lg-12 col-md-12 col-sm-12 align-center mbr-section-btn"><button type="submit" class="btn btn-primary display-7">Send message</button></div>
+                        <div class="col-lg-12 col-md-12 col-sm-12 align-center mbr-section-btn"><button type="submit" class="btn btn-info-outline display-7">Send message</button></div>
                     </div>
                 </form>
             </div>
