--- a/page1.html
+++ b/page1.html
@@ -16,7 +16,7 @@
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="preload" href="https://fonts.googleapis.com/css?family=Inter+Tight:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter+Tight:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap"></noscript>
-  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=2p6kFc"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=2p6kFc" type="text/css">
+  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=fdjFqL"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=fdjFqL" type="text/css">
 
   
   
@@ -34,7 +34,7 @@
             <div class="title col-md-12 col-lg-10">
                 <h3 class="mbr-section-title mbr-fonts-style align-center mt-0 mb-0 display-2">
                 <strong>Radio Garousi</strong></h3>
-                <h4 class="mbr-section-subtitle align-center mbr-fonts-style mt-4 display-7"><p>Persian · Arabic · Spanish · English</p></h4>
+                <h4 class="mbr-section-subtitle align-center mbr-fonts-style mt-4 display-7"><p>Persian · Ara<span style="font-size: 1.4rem;">bic · Spanish · English</span></p></h4>
                 
             </div>
         </div>
