--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="preload" href="https://fonts.googleapis.com/css?family=Inter+Tight:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
   <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Inter+Tight:100,200,300,400,500,600,700,800,900,100i,200i,300i,400i,500i,600i,700i,800i,900i&display=swap"></noscript>
-  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=jPFql4"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=jPFql4" type="text/css">
+  <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css?v=3E8e0q"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css?v=3E8e0q" type="text/css">
 
   
   
@@ -508,7 +508,7 @@ if (document.querySelector('#simp')) {
         </div>
         <div class="row justify-content-center">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="GEeJE8NHLqg+TJ4U/9SRVyAIKB0ec8I8anC1g0cKhwGGonsfmQZ7tK/RpNWDFXgfA2L10+V5wG6JR8mVyLrx+iYjxpgfHofcBQXz9uUKwb0erjhH2VbQ9oZ75MGYnTwD">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="qeNeOr7XUz7Rg9WcpJBxOEyRm5qJGeEpD9DcX0jsImLB7Df9bpknuAuDpa5+3iL7Gsu5C7L3aRPUSS0cI9ApBRk2k0Lv44Y7N8AB2p1F6I0hQLUKnAgq9hUbpjbbVOCO">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
